// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Example Proof: baked-spa > should match Development snapshots (Identity keys) > baked-spa/dev-transforms/index.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    <link
      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;800&display=swap"
      rel="stylesheet"
    />
  </head>
  <body>
    <div id="app"></div>
    <script type="module" src="/src/main.ts"></script>
  </body>
</html>"
`;

exports[`Example Proof: baked-spa > should match Development snapshots (Identity keys) > baked-spa/dev-transforms/src/.entries/main.ar.ts 1`] = `
"import { _t, loadI18nInstance } from "zintl/internal";
import _zintl_mgr_b_src__entries_main from "virtual:zintl/manager/none/boundary:b_src__entries_main";
import { zintl } from "zintl";
await loadI18nInstance({ locale: "ar", loaders: { ["b_src__entries_main"]: _zintl_mgr_b_src__entries_main.loader } });
import "../style.css";


export async function initApp() {
  const appRoot = document.querySelector<HTMLDivElement>("#app")!;

  appRoot.innerHTML = _t("Zintl is baked", { _mgr: _zintl_mgr_b_src__entries_main, _bId: "b_src__entries_main_ar_initApp" });

  // This is a translatable string that will be baked!
  document.title = _t("Zintl | Baked SPA Example", { _mgr: _zintl_mgr_b_src__entries_main, _bId: "b_src__entries_main_ar_initApp" });
}

void initApp();

initApp();"
`;

exports[`Example Proof: baked-spa > should match Development snapshots (Identity keys) > baked-spa/dev-transforms/src/.entries/main.en.ts 1`] = `
"import { _t, loadI18nInstance } from "zintl/internal";
import _zintl_mgr_b_src__entries_main from "virtual:zintl/manager/none/boundary:b_src__entries_main";
import { zintl } from "zintl";
await loadI18nInstance({ locale: "en", loaders: { ["b_src__entries_main"]: _zintl_mgr_b_src__entries_main.loader } });
import "../style.css";


export async function initApp() {
  const appRoot = document.querySelector<HTMLDivElement>("#app")!;

  appRoot.innerHTML = _t("Zintl is baked", { _mgr: _zintl_mgr_b_src__entries_main, _bId: "b_src__entries_main_en_initApp" });

  // This is a translatable string that will be baked!
  document.title = _t("Zintl | Baked SPA Example", { _mgr: _zintl_mgr_b_src__entries_main, _bId: "b_src__entries_main_en_initApp" });
}

void initApp();

initApp();"
`;

exports[`Example Proof: baked-spa > should match Development snapshots (Identity keys) > baked-spa/dev-transforms/src/.entries/main.es.ts 1`] = `
"import { _t, loadI18nInstance } from "zintl/internal";
import _zintl_mgr_b_src__entries_main from "virtual:zintl/manager/none/boundary:b_src__entries_main";
import { zintl } from "zintl";
await loadI18nInstance({ locale: "es", loaders: { ["b_src__entries_main"]: _zintl_mgr_b_src__entries_main.loader } });
import "../style.css";


export async function initApp() {
  const appRoot = document.querySelector<HTMLDivElement>("#app")!;

  appRoot.innerHTML = _t("Zintl is baked", { _mgr: _zintl_mgr_b_src__entries_main, _bId: "b_src__entries_main_es_initApp" });

  // This is a translatable string that will be baked!
  document.title = _t("Zintl | Baked SPA Example", { _mgr: _zintl_mgr_b_src__entries_main, _bId: "b_src__entries_main_es_initApp" });
}

void initApp();

initApp();"
`;

exports[`Example Proof: baked-spa > should match Development snapshots (Identity keys) > baked-spa/dev-transforms/src/main.ts 1`] = `
"import { _t } from "zintl/internal";
import _zintl_mgr_b_src_main_initApp from "virtual:zintl/manager/none/boundary:b_src_main_initApp";
import "./style.css";


export async function initApp() {
  const appRoot = document.querySelector<HTMLDivElement>("#app")!;

  appRoot.innerHTML = _t("Zintl is baked", { _mgr: _zintl_mgr_b_src_main_initApp, _bId: "b_src_main_initApp" });

  // This is a translatable string that will be baked!
  document.title = _t("Zintl | Baked SPA Example", { _mgr: _zintl_mgr_b_src_main_initApp, _bId: "b_src_main_initApp" });
}

void initApp();"
`;

exports[`Example Proof: baked-spa > should match Development snapshots (Identity keys) > baked-spa/dev-transforms/virtual:zintl/content/ar/boundary:b_src__entries_main 1`] = `
"export default {
  };"
`;

exports[`Example Proof: baked-spa > should match Development snapshots (Identity keys) > baked-spa/dev-transforms/virtual:zintl/content/ar/boundary:b_src_main_initApp 1`] = `
"export default {
  };"
`;

exports[`Example Proof: baked-spa > should match Development snapshots (Identity keys) > baked-spa/dev-transforms/virtual:zintl/content/es/boundary:b_src__entries_main 1`] = `
"export default {
  };"
`;

exports[`Example Proof: baked-spa > should match Development snapshots (Identity keys) > baked-spa/dev-transforms/virtual:zintl/content/es/boundary:b_src_main_initApp 1`] = `
"export default {
  };"
`;

exports[`Example Proof: baked-spa > should match Development snapshots (Identity keys) > baked-spa/dev-transforms/virtual:zintl/manager/none/boundary:b_src__entries_main 1`] = `
"export default { id: "b_src__entries_main", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
  };
                case "ar":
          return import("virtual:zintl/content/ar/boundary:b_src__entries_main").then(m => m.default);
        case "es":
          return import("virtual:zintl/content/es/boundary:b_src__entries_main").then(m => m.default);
        default: return {};
      }
    } };"
`;

exports[`Example Proof: baked-spa > should match Development snapshots (Identity keys) > baked-spa/dev-transforms/virtual:zintl/manager/none/boundary:b_src_main_initApp 1`] = `
"export default { id: "b_src_main_initApp", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
  };
                case "ar":
          return import("virtual:zintl/content/ar/boundary:b_src_main_initApp").then(m => m.default);
        case "es":
          return import("virtual:zintl/content/es/boundary:b_src_main_initApp").then(m => m.default);
        default: return {};
      }
    } };"
`;

exports[`Example Proof: baked-spa > should match Final Production Build (dist) snapshots > baked-spa/dist/ar/index.html 1`] = `
"
<!doctype html>
<html dir="rtl" lang="ar">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;800&display=swap" rel="stylesheet" />
    <script type="module" crossorigin src="/assets/ar/index-I6f13HBx.js"></script>
    <link rel="modulepreload" crossorigin href="/assets/style-ClUQthgb.js">
    <link rel="stylesheet" crossorigin href="/assets/style-CmqYZCI2.css">
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>"
`;

exports[`Example Proof: baked-spa > should match Final Production Build (dist) snapshots > baked-spa/dist/assets/ar/index-I6f13HBx.js 1`] = `"import"../style-ClUQthgb.js";async function e(){let e=document.querySelector(\`#app\`);e.innerHTML=\`زينتل مخبوز\`,document.title=\`زينتل | مثال تطبيق الصفحة الواحدة\`}e(),e();"`;

exports[`Example Proof: baked-spa > should match Final Production Build (dist) snapshots > baked-spa/dist/assets/en/index-evYZuUE2.js 1`] = `"import"../style-ClUQthgb.js";async function e(){let e=document.querySelector(\`#app\`);e.innerHTML=\`Zintl is baked\`,document.title=\`Zintl | Baked SPA Example\`}e(),e();"`;

exports[`Example Proof: baked-spa > should match Final Production Build (dist) snapshots > baked-spa/dist/assets/es/index-qvgZk4tG.js 1`] = `"import"../style-ClUQthgb.js";async function e(){let e=document.querySelector(\`#app\`);e.innerHTML=\`Zintl horneado\`,document.title=\`Zintl | Ejemplo de SPA horneado\`}e(),e();"`;

exports[`Example Proof: baked-spa > should match Final Production Build (dist) snapshots > baked-spa/dist/assets/style-ClUQthgb.js 1`] = `"(function(){let e=document.createElement(\`link\`).relList;if(e&&e.supports&&e.supports(\`modulepreload\`))return;for(let e of document.querySelectorAll(\`link[rel="modulepreload"]\`))n(e);new MutationObserver(e=>{for(let t of e)if(t.type===\`childList\`)for(let e of t.addedNodes)e.tagName===\`LINK\`&&e.rel===\`modulepreload\`&&n(e)}).observe(document,{childList:!0,subtree:!0});function t(e){let t={};return e.integrity&&(t.integrity=e.integrity),e.referrerPolicy&&(t.referrerPolicy=e.referrerPolicy),e.crossOrigin===\`use-credentials\`?t.credentials=\`include\`:e.crossOrigin===\`anonymous\`?t.credentials=\`omit\`:t.credentials=\`same-origin\`,t}function n(e){if(e.ep)return;e.ep=!0;let n=t(e);fetch(e.href,n)}})();"`;

exports[`Example Proof: baked-spa > should match Final Production Build (dist) snapshots > baked-spa/dist/en/index.html 1`] = `
"
<!doctype html>
<html dir="ltr" lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;800&display=swap" rel="stylesheet" />
    <script type="module" crossorigin src="/assets/en/index-evYZuUE2.js"></script>
    <link rel="modulepreload" crossorigin href="/assets/style-ClUQthgb.js">
    <link rel="stylesheet" crossorigin href="/assets/style-CmqYZCI2.css">
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>"
`;

exports[`Example Proof: baked-spa > should match Final Production Build (dist) snapshots > baked-spa/dist/es/index.html 1`] = `
"
<!doctype html>
<html dir="ltr" lang="es">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;800&display=swap" rel="stylesheet" />
    <script type="module" crossorigin src="/assets/es/index-qvgZk4tG.js"></script>
    <link rel="modulepreload" crossorigin href="/assets/style-ClUQthgb.js">
    <link rel="stylesheet" crossorigin href="/assets/style-CmqYZCI2.css">
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>"
`;

exports[`Example Proof: baked-spa > should match Final Production Build (dist) snapshots > baked-spa/dist/index.html 1`] = `
"
<!doctype html>
<html>
  <head>
    <script>
      const lang = (navigator.language || 'en').split('-')[0];
      const supported = ['en', 'ar', 'es'];
      const target = supported.includes(lang) ? lang : 'en';
      window.location.replace('/' + target + '/');
    </script>
  </head>
</html>"
`;
